Signed Exchange: Preserve URL fragment

This patch makes SignedExchangeLoader propagate URL fragment from outer
request URL to redirect (inner) URL.

Bug: 865852
Change-Id: Ib4000508464a4d0cf82c4757aca05c0d670ed647
Reviewed-on: https://chromium-review.googlesource.com/1146410
Commit-Queue: Kunihiko Sakamoto <ksakamoto@chromium.org>
Reviewed-by: Kinuko Yasuda <kinuko@chromium.org>
Cr-Commit-Position: refs/heads/master@{#577116}
Former-commit-id: e43057b3c7b0b3a977421c9c4bc08740ef5ae51f